eel4842_ws/log/build_2024-03-07_19-58-54/wall_following/stderr.log
  File "/home/molyo/EEL4842/eel4842_ws/install/wall_following/lib/python3.10/site-packages/wall_following/wall_follow.py", line 37
    if (!self.autonomous):
        ^
SyntaxError: invalid syntax

